tests/machine/x/scala/dataset_where_filter.scala
// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z
object dataset_where_filter {
  case class Adult(name: String, age: Int, is_senior: Boolean)
  case class People(name: String, age: Int)

  def main(args: Array[String]): Unit = {
    val people = List(Map("name" -> "Alice", "age" -> 30), Map("name" -> "Bob", "age" -> 15), Map("name" -> "Charlie", "age" -> 65), Map("name" -> "Diana", "age" -> 45))
    val adults = for { person <- people; if person.age >= 18 } yield Map("name" -> person.name, "age" -> person.age, "is_senior" -> person.age >= 60)
    println("--- Adults ---")
    for(person <- adults) {
      println(s"${person.name} is ${person.age} ${(if (person.is_senior) " (senior)" else "")}")
    }
  }
}
